--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "@msgpack/msgpack": "^2.8.0",
+    "buffer": "^6.0.3",
     "jssha": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
