--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,8 +10,7 @@
   },
 
   "action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_icon": "icon.png"
   },
 
   "content_scripts": [
@@ -28,7 +27,6 @@
   "permissions": [
     "storage"
   ],
-
   "host_permissions": [
     "<all_urls>"
   ]
