--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,20 +14,17 @@
   },
 
   "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["js/vendor.js", "js/content_script.js"]
-      }
+    {
+      "matches": ["<all_urls>"],
+      "js": ["js/vendor.js", "js/content_script.js"],
+      "run_at":"document_end"
+    }
   ],
 
   "background": {
     "service_worker": "js/background.js"
   },
 
-  "permissions": [
-    "storage"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ]
+  "permissions": ["storage", "activeTab", "contextMenus", "scripting", "tabs"],
+  "host_permissions": ["<all_urls>"]
 }
