--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "query-string": "^8.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.42.0",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
