--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "buffer": "^6.0.3",
+    "i": "^0.3.7",
     "jssha": "^3.2.0",
+    "npm": "^9.3.1",
     "query-string": "^8.1.0",
     "react": "^17.0.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^7.42.0",
-    "react-scroll": "^1.8.9"
+    "react-hook-form": "^7.42.0"
   },
   "devDependencies": {
     "@types/chrome": "0.0.158",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-scroll": "^1.8.5",
     "copy-webpack-plugin": "^9.0.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
