--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/resize-observer-browser": "^0.1.7",
     "copy-webpack-plugin": "^9.0.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
